--- a/typescript/jest-ts/package.json
+++ b/typescript/jest-ts/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/jest": "^26.0.23",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "jest": "^23.6.0"
