--- a/redux/redux-ts-ecommerce/package.json
+++ b/redux/redux-ts-ecommerce/package.json
@@ -44,6 +44,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-test-renderer": "^17.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "redux-devtools-extension": "^2.13.9"
   }
 }
